--- a/examples/04-observe.html/index.html
+++ b/examples/04-observe.html/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-
 <body>
   <div id='app'>
+    <h1>{{msg}}</h1>
     {{msg}}
+    <hr>
+    {{count}}
   </div>
-  <script src="../../dist/vue.js"></script>
+  <script src='../../dist/vue.js'></script>
   <script>
     const vm = new Vue({
       el: '#app',
-      // template: '<h1>{{msg}}</h1>',
-      render(h) {
-        return h('h1', this.msg)
-      },
       data: {
-        msg: 'Hello Vue'
+        msg: 'Hello Vue',
+        count: 100
       }
     })
   </script>
 </body>
-
 </html>
