--- a/examples/03-initVue/index.html
+++ b/examples/03-initVue/index.html
@@ -2,28 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
   <div id='app'>
-    <p>hello world</p>
-    <h1>{{msg}}</h1>
-    {{msg}}
-    <hr>
-    {{count}}
-    myName: {{myName}}
+    <div>
+      <h1>Hello World</h1>
+      {{ msg }}
+    </div>
   </div>
   <script src='../../dist/vue.js'></script>
   <script>
     const vm = new Vue({
       el: '#app',
       data: {
-        msg: 'Hello Vue',
-        count: 100
-      },
-      mounted() {
-        this.count = 200
+        msg: 'Hello Vue'
       }
     })
   </script>
